--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,9 +24,9 @@ endif()
 
 target_link_libraries(v8pp_test v8pp ${CMAKE_DL_LIBS})
 
-add_test(v8pp_test v8pp_test --version --run-tests)
+add_test(v8pp_test ${PROJECT_BINARY_DIR}/v8pp_test --version --run-tests)
 
 if(BUILD_SHARED_LIBS)
 	file(GLOB JS_TESTS *.js)
-	add_test(v8pp_js_test v8pp_test --lib-path ${PROJECT_BINARY_DIR}/plugins ${JS_TESTS})
+	add_test(v8pp_js_test ${PROJECT_BINARY_DIR}/v8pp_test --lib-path ${PROJECT_BINARY_DIR}/plugins ${JS_TESTS})
 endif()
