--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
-        build_type: [ Release ] #, Debug ]
+        build_type: [ Release, Debug ]
         shared_lib: [ false, true ]
         header_only: [ false, true ]
         v8_compress_pointers: [ false, true ]
