use std::string_view only when V8PP_USE_STD_STRING_VIEW=1
add build option, use it in the generated config.hpp

See #166

--- a/v8pp/config.hpp.in
+++ b/v8pp/config.hpp.in
@@ -51,4 +51,8 @@ v8::Local<v8::Value> V8PP_PLUGIN_INIT_PROC_NAME(isolate)
 #define V8PP_IMPL
 #endif
 
+#if !defined(V8PP_USE_STD_STRING_VIEW)
+#define V8PP_USE_STD_STRING_VIEW @V8PP_USE_STD_STRING_VIEW@
+#endif
+
 #endif // V8PP_CONFIG_HPP_INCLUDED
