--- a/v8pp/config.hpp.in
+++ b/v8pp/config.hpp.in
@@ -51,4 +51,6 @@ v8::Local<v8::Value> V8PP_PLUGIN_INIT_PROC_NAME(isolate)
 #define V8PP_IMPL
 #endif
 
+#define V8PP_USE_STD_STRING_VIEW 1
+
 #endif // V8PP_CONFIG_HPP_INCLUDED
