--- a/v8pp/config.hpp.in
+++ b/v8pp/config.hpp.in
@@ -53,4 +53,7 @@ v8::Local<v8::Value> V8PP_PLUGIN_INIT_PROC_NAME(isolate)
 
 #define V8PP_USE_STD_STRING_VIEW 1
 
+#define V8PP_STRINGIZE(s)  V8PP_STRINGIZE0(s)
+#define V8PP_STRINGIZE0(s) #s
+
 #endif // V8PP_CONFIG_HPP_INCLUDED
