--- a/v8pp/CMakeLists.txt
+++ b/v8pp/CMakeLists.txt
@@ -3,14 +3,14 @@
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 find_package(V8 REQUIRED)
 
-configure_file(config.hpp.in ${CMAKE_CURRENT_SOURCE_DIR}/config.hpp)
+configure_file(config.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/config.hpp)
 
 if(V8_COMPRESS_POINTERS)
 	set(V8PP_DEFINES V8_COMPRESS_POINTERS V8_31BIT_SMIS_ON_64BIT_ARCH)
 endif()
 
 set(V8PP_HEADERS
-	${CMAKE_CURRENT_SOURCE_DIR}/config.hpp
+	${CMAKE_CURRENT_BINARY_DIR}/config.hpp
 	call_from_v8.hpp
 	call_v8.hpp
 	class.hpp
@@ -64,6 +64,7 @@ if(V8PP_HEADER_ONLY)
 	target_compile_options(v8pp INTERFACE ${V8PP_COMPILE_OPTIONS})
 	target_include_directories(v8pp INTERFACE
 		$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>
+		$<BUILD_INTERFACE:${PROJECT_BINARY_DIR}>
 		$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
 	target_link_libraries(v8pp INTERFACE V8::v8 V8::libplatform)
 else()
@@ -72,6 +73,7 @@ else()
 	target_compile_options(v8pp PRIVATE ${V8PP_COMPILE_OPTIONS})
 	target_include_directories(v8pp PUBLIC
 		$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>
+		$<BUILD_INTERFACE:${PROJECT_BINARY_DIR}>
 		$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
 	target_link_libraries(v8pp PUBLIC V8::v8 V8::libplatform)
 	if(BUILD_SHARED_LIBS)
@@ -79,20 +81,22 @@ else()
 	endif()
 endif()
 
-source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${V8PP_HEADERS} ${V8PP_SOURCES})
+#source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${V8PP_HEADERS} ${V8PP_SOURCES})
 
 # Install
 include(GNUInstallDirs)
 include(CMakePackageConfigHelpers)
 
+set(targets_export_name v8pp_Targets)
+
 write_basic_package_version_file("${PROJECT_BINARY_DIR}/ConfigVersion.cmake" COMPATIBILITY SameMajorVersion)
 configure_package_config_file("${PROJECT_SOURCE_DIR}/cmake/Config.cmake.in" "${PROJECT_BINARY_DIR}/Config.cmake"
 	INSTALL_DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/v8pp/cmake)
 
-install(TARGETS v8pp EXPORT v8pp_Targets)
-install(EXPORT v8pp_Targets
+install(TARGETS v8pp EXPORT ${targets_export_name})
+install(EXPORT ${targets_export_name}
 	NAMESPACE v8pp::
-	FILE v8ppTargets.cmake
+	FILE ${targets_export_name}.cmake
 	DESTINATION "${CMAKE_INSTALL_DATADIR}/cmake/v8pp")
 
 install(FILES "${PROJECT_BINARY_DIR}/ConfigVersion.cmake" "${PROJECT_BINARY_DIR}/Config.cmake"
