--- a/v8pp/packages.config
+++ b/v8pp/packages.config
@@ -2,8 +2,12 @@
 <packages>
   <package id="v8.redist-v142-x64" version="8.0.426.28" targetFramework="native" />
   <package id="v8.redist-v142-x86" version="7.5.288.23" targetFramework="native" />
+  <package id="v8.redist-v143-x64" version="9.8.177.4" targetFramework="native" />
+  <package id="v8.redist-v143-x86" version="9.8.177.4" targetFramework="native" />
   <package id="v8.symbols-v142-x64" version="8.0.426.28" targetFramework="native" />
   <package id="v8.symbols-v142-x86" version="7.5.288.23" targetFramework="native" />
   <package id="v8-v142-x64" version="8.0.426.28" targetFramework="native" />
   <package id="v8-v142-x86" version="7.5.288.23" targetFramework="native" />
+  <package id="v8-v143-x64" version="9.8.177.4" targetFramework="native" />
+  <package id="v8-v143-x86" version="9.8.177.4" targetFramework="native" />
 </packages>
