--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,10 @@ project(v8pp
 	LANGUAGES CXX
 )
 
+set(V8PP_MAJOR 1)
+set(V8PP_MINOR 0)
+set(V8PP_REVISION 0)
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
