Correct V8PP_VERSION define

--- a/v8pp/config.hpp.in
+++ b/v8pp/config.hpp.in
@@ -6,7 +6,7 @@
 #define V8PP_MINOR @V8PP_MINOR@
 #define V8PP_REVISION @V8PP_REVISION@
 
-#define V8PP_VERSION V8PP_MAJOR.V8PP_MINOR.V8PP_REVISION
+#define V8PP_VERSION "@V8PP_MAJOR@.@V8PP_MINOR@.@V8PP_REVISION@"
 
 /// v8::Isolate data slot number, used in v8pp for shared data
 #if !defined(V8PP_ISOLATE_DATA_SLOT)
