use Visual C++ 2022 on CI

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -43,7 +43,7 @@ jobs:
       uses: ilammy/msvc-dev-cmd@v1
       with:
         arch: x64
-        toolset: 14.29 # Visual C++ 2019
+        vsversion: 2022
 
     - name: Install ninja-build tool
       uses: seanmiddleditch/gha-setup-ninja@v3
