--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -17,7 +17,7 @@ jobs:
             v8_enable_sandbox: true
           - os: windows-latest
             v8_compress_pointers: true
-            v8_enable_sandbox: false
+            v8_enable_sandbox: true
 
     runs-on: ${{matrix.os}}
 
@@ -36,14 +36,14 @@ jobs:
 
     - name: Install V8 nuget
       if: startsWith(matrix.os, 'windows')
-      run: nuget install v8-v142-x64 -OutputDirectory ${{github.workspace}}/build
+      run: nuget install v8-v143-x64 -OutputDirectory ${{github.workspace}}/build
 
     - name: Install Visual C++ 
       if: startsWith(matrix.os, 'windows')
       uses: ilammy/msvc-dev-cmd@v1
       with:
         arch: x64
-        toolset: 14.29 # Visual C++ 2019
+        vsversion: 2022
 
     - name: Install ninja-build tool
       uses: seanmiddleditch/gha-setup-ninja@v3
